<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity">

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/are_you_a_provider_or_passenger"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <ImageView
        android:id="@+id/providerimage"
        android:layout_width="384dp"
        android:layout_height="156dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:src="@drawable/car"
        app:layout_constraintTop_toBottomOf="@id/textView"

        />


    <Button
        android:id="@+id/btnprovider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/post_a_trip_as_a_provider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.472"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/providerimage" />

    <ImageView
        android:id="@+id/passengerimage"
        android:layout_width="384dp"
        android:layout_height="156dp"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:src="@drawable/car"
        app:layout_constraintTop_toBottomOf="@+id/btnprovider"
        tools:layout_editor_absoluteX="-3dp" />

    <Button
        android:id="@+id/btnpassenger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/find_a_ride_as_a_passenger"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passengerimage"/>


</androidx.constraintlayout.widget.ConstraintLayout>